Created login feature

--- a/pages/login.html
+++ b/pages/login.html
@@ -1,1 +1,44 @@
-<!-- <link rel="stylesheet" href="../styles/stylesLogin.css"> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>login</title>
+</head>
+<body>
+  <container>
+    <div>
+      <img src="./images/phone.png" alt="Phone"/>
+    </div>
+    <div>
+      <h1>WELCOME!</h1>
+    </div>
+    <div>
+      <form method="post">
+        <div>
+          <label for="email">LOGIN</label>
+          <input type="text" name="email" id="email" placeholder="Enter Email Address" required
+          data-parsley-type="email" data-parsley-trigger="keyup"/>
+        </div>
+        <p>
+        If your organization is already using Deskit but you do not 
+        have your own login, please contact your administrator who 
+        can invite you.
+      </p>
+      <div>
+        <input type="submit" name="login" value="LOGIN"/>
+      </div>
+      <p>
+      </div>
+      <div>
+        <p>
+        If your organization is already using 
+        Deskit but you do not have your own 
+        email, please contact your administrator.  
+        </p>
+      </div>
+      </form>
+      
+  </container>
+</body>
+</html>
